PLUGINS-332 Fixing trailing url issue in whitelist & Cleanup